<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SplashActivity!</string>
    <string name="app_name">HigherLowerGame</string>
    <string name="label_menu">Menu</string>
    <string name="label_splash">Splash</string>
    <string name="label_play">Play</string>
    <string name="label_score">Score</string>
    <string name="label_help">Help</string>
    <dimen name="button_width_main">175dp</dimen>
    <dimen name="button_margin_top_main">5dp</dimen>
    <color name="button_text_color_main">#FFF</color>
    <string name="label_high_score">High Score</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="label_time_score">2:00</string>
    <string name="label_instruction">Instruction</string>
    <string name="label_instruction_details">Higher or Lower is a two-minute simple game wherein the player has to guess and uncover the hidden number. The range is from 1 to 100. Good luck and happy guessing! </string>
    <string name="label_all_rights_reserved">All Rights Reserved</string>
    <string name="label_copyright">copyright 2012</string>
    <string name="label_developed_by">developed by Mounir</string>

</resources>