<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_background"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/highScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_high_score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20pt" />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_time_score"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/scoreBackToMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/yellow_button"
        android:onClick="onClickBackToMain"
        android:text="@string/back_to_menu"
        android:textColor="@color/button_text_color_main" />

</LinearLayout>